--- a/vd_web/index.html
+++ b/vd_web/index.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="index.css" />
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/>
-  <link rel="icon" href="favicon.ico" />
+  <!-- <link rel="icon" href="favicon.ico" /> -->
 </head>
 <body>
   <header class="header">
@@ -92,33 +92,84 @@
   </footer>
 
   <!-- Chatbot Embed -->
-  <button id="chat-launcher">💬</button>
+  <button id="chat-launcher" aria-label="Open chatbot">💬</button>
   <div id="chat-iframe-container">
-    <iframe src="https://vegasdrones-chatbot-quote.vercel.app?embed=1" ...></iframe>
-
+    <button id="chat-close" aria-label="Close chatbot">✕</button>
+    <iframe
+      src="https://vegasdrones-chatbot-quote-bp595z1s9-vegas-drones.vercel.app"
+      width="100%"
+      height="100%"
+      frameborder="0"
+      title="Vegas Drones Chatbot"
+      onerror="document.getElementById('chat-fallback').style.display = 'block';"
+    ></iframe>
+    <div id="chat-fallback" style="display: none; color: white; padding: 20px; text-align: center;">
+      Chatbot failed to load. Please check the console for errors (likely X-Frame-Options).
+    </div>
   </div>
 
   <script defer src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
   <script>
-    AOS.init({ duration: 1000, once: true, disable: 'mobile' });
-
+    // Initialize AOS with error handling
+    if (typeof AOS !== 'undefined') {
+      AOS.init({ duration: 1000, once: true, disable: 'mobile' });
+    } else {
+      console.error('AOS library failed to load');
+    }
+  </script>
+  <script>
     document.addEventListener('DOMContentLoaded', function() {
+      console.log('Script loaded. Elements:', {
+        launcher: document.getElementById('chat-launcher'),
+        iframeContainer: document.getElementById('chat-iframe-container'),
+        chatClose: document.getElementById('chat-close'),
+        chatFallback: document.getElementById('chat-fallback')
+      });
+
       const navToggle = document.querySelector('.nav-toggle');
       const navLinks = document.querySelector('.nav-links');
-      navToggle.addEventListener('click', function() {
-        navLinks.classList.toggle('active');
-      });
-    });
+      const launcher = document.getElementById('chat-launcher');
+      const iframeContainer = document.getElementById('chat-iframe-container');
+      const chatClose = document.getElementById('chat-close');
 
-    const launcher = document.getElementById('chat-launcher');
-    const iframeContainer = document.getElementById('chat-iframe-container');
+      // Toggle mobile navigation
+      if (navToggle && navLinks) {
+        navToggle.addEventListener('click', function() {
+          console.log('Nav toggle clicked');
+          navLinks.classList.toggle('active');
+        });
+      } else {
+        console.error('Nav toggle or links not found');
+      }
 
-    function openChat() {
-      iframeContainer.style.display = 'block';
-    }
-    launcher.addEventListener('click', () => {
-      const isOpen = iframeContainer.style.display === 'block';
-      iframeContainer.style.display = isOpen ? 'none' : 'block';
+      // Toggle chatbot visibility
+      function toggleChat() {
+        console.log('toggleChat called. Current display:', iframeContainer.style.display);
+        iframeContainer.style.display = iframeContainer.style.display === 'block' ? 'none' : 'block';
+      }
+
+      // Open chatbot on launcher click
+      if (launcher) {
+        launcher.addEventListener('click', function() {
+          console.log('Chat launcher clicked');
+          toggleChat();
+        });
+      } else {
+        console.error('Chat launcher not found');
+      }
+
+      // Close chatbot
+      if (chatClose) {
+        chatClose.addEventListener('click', function() {
+          console.log('Chat close clicked');
+          iframeContainer.style.display = 'none';
+        });
+      } else {
+        console.error('Chat close button not found');
+      }
+
+      // Expose toggleChat for "Get Quote" links
+      window.openChat = toggleChat;
     });
   </script>
 </body>
