--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,7 +16,6 @@
   <link rel="stylesheet" href="index.css" />
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/>
-  <!-- <link rel="icon" href="favicon.ico" /> -->
 </head>
 <body>
   <header class="header">
@@ -73,6 +73,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="#" onclick="openChat()">Get Quote</a></li>
+          <li><a href="faq-las-vegas-drone-show.html">FAQs</a></li>
           <li><a href="contact-las-vegas-drone-shows.html">Contact</a></li>
         </ul>
       </div>
@@ -90,14 +91,20 @@
   <!-- Chatbot Embed -->
   <div id="chat-iframe-container">
     <button id="chat-close" aria-label="Close chatbot">✕</button>
-    <iframe
-      src="https://vegasdrones-chatbot-quote-bp595z1s9-vegas-drones.vercel.app"
-      width="100%"
-      height="100%"
-      frameborder="0"
-      title="Vegas Drones Chatbot"
-      onerror="document.getElementById('chat-fallback').style.display = 'block';"
-    ></iframe>
+    <div id="chat-iframe-container">
+      <button id="chat-close" aria-label="Close chatbot">✕</button>
+      <iframe
+        src="https://vegasdrones-chatbot-quote-htt601ejo-vegas-drones.vercel.app/"
+        width="100%"
+        height="100%"
+        frameborder="0"
+        title="Vegas Drones Chatbot"
+        onerror="document.getElementById('chat-fallback').style.display = 'block';"
+      ></iframe>
+      <div id="chat-fallback" style="display: none; background: #ffffff; color: #000000; padding: 20px; text-align: center;">
+        Chatbot failed to load. Please try again later or contact support.
+      </div>
+    </div>
     <div id="chat-fallback" style="display: none; background: #ffffff; color: #000000; padding: 20px; text-align: center;">
       Chatbot failed to load. Please check the console for errors (likely X-Frame-Options).
     </div>
