--- a/vd_web/index.html
+++ b/vd_web/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -23,7 +22,6 @@
       <div class="logo"><span>VEGAS DRONES</span></div>
       <ul class="nav-links">
         <li><a href="faq-las-vegas-drone-show.html">FAQs</a></li>
-        <li><a href="#" onclick="openChat()">Get Quote</a></li>
         <li><a href="contact-las-vegas-drone-shows.html" class="btn-nav">Contact</a></li>
       </ul>
     </nav>
@@ -32,14 +30,10 @@
     <section class="hero">
       <div class="hero-overlay">
         <h1>Illuminate the Night with Vegas Drones</h1>
-        <p>FAA-Certified Drone Light Shows for Events, Conventions, and Weddings</p>
-        <div class="chat-launcher-wrapper">
-          <button id="chat-launcher" aria-label="Open chatbot">
-            <video id="alien-video" src="talking_alien_head.mov" muted preload="auto" playsinline></video>
-          </button>
-          <span class="chat-bubble">💬</span>
+        <div class="alien-head-wrapper">
+          <video id="alien-video" src="talking_alien_head.mov" muted preload="auto" playsinline autoplay loop></video>
         </div>
-        <p class="chat-instruction">Let the Vegas Drones assistant answer all your questions</p>
+        <p>FAA-Certified Drone Light Shows for Events, Conventions, and Weddings</p>
       </div>
     </section>
     <section class="features" id="features">
@@ -72,12 +66,11 @@
         <h3>Quick Links</h3>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="#" onclick="openChat()">Get Quote</a></li>
           <li><a href="faq-las-vegas-drone-show.html">FAQs</a></li>
           <li><a href="contact-las-vegas-drone-shows.html">Contact</a></li>
         </ul>
       </div>
-      <div class="footer-section">
+      <div class="footer-section contact-box">
         <h3>Connect With Us</h3>
         <div class="social-links">
           <a href="https://facebook.com/61570074433959" target="_blank"><i class="fab fa-facebook-f"></i></a>
@@ -88,27 +81,6 @@
     </div>
     <div class="footer-bottom"><p>© 2025 Vegas Drones. All rights reserved.</p></div>
   </footer>
-  <!-- Chatbot Embed -->
-  <div id="chat-iframe-container">
-    <button id="chat-close" aria-label="Close chatbot">✕</button>
-    <div id="chat-iframe-container">
-      <button id="chat-close" aria-label="Close chatbot">✕</button>
-      <iframe
-        src="https://vegasdrones-chatbot-quote-2fllu64pg-vegas-drones.vercel.app"
-        width="100%"
-        height="100%"
-        frameborder="0"
-        title="Vegas Drones Chatbot"
-        onerror="document.getElementById('chat-fallback').style.display = 'block';"
-      ></iframe>
-      <div id="chat-fallback" style="display: none; background: #ffffff; color: #000000; padding: 20px; text-align: center;">
-        Chatbot failed to load. Please try again later or contact support.
-      </div>
-    </div>
-    <div id="chat-fallback" style="display: none; background: #ffffff; color: #000000; padding: 20px; text-align: center;">
-      Chatbot failed to load. Please check the console for errors (likely X-Frame-Options).
-    </div>
-  </div>
   <script defer src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
   <script defer src="scripts.js"></script>
 </body>
